--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 
 							<h3>Education</h3>
 							<ul>
-								<li>BE in Industrial Engineering and MSc in Industrial Ecology and Biotechnology</li>
+								<li>Specialization: Python-developer at Yandex Practicum</li>
+								<li>BE in Industrial Engineering</li>
+								<li>MSc in Industrial Ecology and Biotechnology</li>
 							</ul>
 
 							<h3>Professional Experience and Technical Skills</h3>
