--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 					<section id="one">
 						<header class="major">
 							<h3>About me</h3>
-							<p>I am a data scientist with experience in software development. I possess strong leadership skills, including 3+ years of product management experience. 
-								<br> My technical expertise as a Data Specialist includes data collection, processing, visualization, and the application of machine learning algorithms. For my work, I use Python libraries such as Pandas, Plotly, Scikit-learn, and Selenium, as well as SQL, Tableau, Power BI, and Excel.
-								<br> As a Software Developer, I am proficient in designing RESTful APIs, packaging applications in Docker containers, working with Git, and utilizing cloud platforms (Yandex Cloud).</p>
+							<p>I am a data analyst with experience in software development and product management.
+                                                        My technical expertise includes data collection, processing, visualization, and the application of machine learning algorithms. For my work, I use Python libraries such as Pandas, Plotly, Scikit-learn, and Selenium, as well as SQL, Tableau, Power BI, and Excel.
+							</p>
 
 							<h3>Education</h3>
 							<ul>
