--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				<div class="inner">
 					<a href="/" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 					<p>Hi👋, I'm<strong> Dmitry Shirikov,</strong><br />
-					a Data Scientist with experience in Software Development and Product Management.</p>
+					a Data Analyst with experience in Software Development and Product Management.</p>
 				</div>
 			</header>
 
@@ -26,7 +26,7 @@
 						<header class="major">
 							<h3>About me</h3>
 							<p>I am a data analyst with experience in software development and product management.
-                                                        My technical expertise includes data collection, processing, visualization, and the application of machine learning algorithms. For my work, I use Python libraries such as Pandas, Plotly, Scikit-learn, and Selenium, as well as SQL, Tableau, Power BI, and Excel.
+                                                        <br> My technical expertise includes data collection, processing, visualization, and the application of machine learning algorithms. For my work, I use Python libraries such as Pandas, Plotly, Scikit-learn, and Selenium, as well as SQL, Tableau, Power BI, and Excel.
 							</p>
 
 							<h3>Education</h3>
