--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						<header class="major">
 							<h3>About me</h3>
 							<p>I am a data analyst with experience in software development and product management.
-                                                        <br> My technical expertise includes data collection, processing, visualization, and the application of machine learning algorithms. For my work, I use Python libraries such as Pandas, Plotly, Scikit-learn, and Selenium, as well as SQL, Tableau, Power BI, and Excel.
+                            <br> My technical expertise includes data collection, processing, visualization, and the application of machine learning algorithms. For my work, I use Python libraries such as Pandas, Plotly, Scikit-learn, and Selenium, as well as SQL, Tableau, Power BI, and Excel.
 							</p>
 
 							<h3>Education</h3>
@@ -54,6 +54,12 @@
 					<section id="two">
 						<h2>Recent projects:</h2>
 						<div class="row">
+							<!-- 0 -->
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="0-SQL.html" class="image fit thumb exclude-lightbox"><img src="images/thumbs/0.jpg" alt=""/></a>
+								<h3>Examples of SQL queries</h3>
+								<p>Analysis of Google Analytics table data in BigQuery.</p>
+							</article>
 							<!-- 1 -->
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="1-bots-identifying.html" class="image fit thumb exclude-lightbox"><img src="images/thumbs/1.jpg" alt=""/></a>
