--- a/3-tableau-youtube.html
+++ b/3-tableau-youtube.html
@@ -14,7 +14,7 @@
 			<div class="inner">
 				<a href="/" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 				<p>Hi👋, I'm<strong> Dmitry Shirikov,</strong><br />
-				a Data Scientist with experience in Software Development and Product Management.</p>
+				a Data Analyst with experience in Software Development and Product Management.</p>
 			</div>
 		</header>
 
