--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				<div class="inner">
 					<a href="/" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 					<p>Hi👋, I'm<strong> Dmitry Shirikov,</strong><br />
-					a Data Analyst with experience in Software Development and Product Management.</p>
+					a Data Analyst with proficient Programming and Data Visualization skills.</p>
 				</div>
 			</header>
 
@@ -25,8 +25,8 @@
 					<section id="one">
 						<header class="major">
 							<h3>About me</h3>
-							<p>I am a data analyst with experience in software development and product management.
-                            <br> My technical expertise includes data collection, processing, visualization, and the application of machine learning algorithms. For my work, I use Python libraries such as Pandas, Plotly, Scikit-learn, and Selenium, as well as SQL, Tableau, Power BI, and Excel.
+							<p>I am a data analyst with proficient Programming and Data Visualization skills.
+                            <br> My technical expertise includes data collection, engineering, visualization, and the application of machine learning algorithms. For my work, I use Python libraries such as Pandas, Plotly, Scikit-learn, and Selenium, as well as SQL, Tableau, Power BI, and Excel.
 							</p>
 
 							<h3>Education</h3>
